# eds_tbot

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: automation.yml
bot/: __main__.py
